--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -55,3 +55,8 @@ body {
 .card img {
   width: 150px;
 }
+
+.ant-radio-button-wrapper-checked {
+  background-color: black !important;
+  border-color: black;
+}
